<resources>
    <string name="app_name">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_dot">.</string>
    <string name="button_equal">=</string>
    <string name="button_sum">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiplication">*</string>
    <string name="button_division">/</string>
    <string name="button_sqrt">√</string>
    <string name="button_power">^</string>
    <string name="button_openParenthesis">(</string>
    <string name="button_closeParenthesis">)</string>
    <string name="button_signChange">±</string>
    <string name="button_back">C</string>
    <string name="button_clear">CE</string>
    <string name="invalid_expression">Invalid expression</string>
</resources>